--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bzh-web-development",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://milladu22.github.io/bzh-web-development/",
+  "homepage": "https://armor-web-creations.vercel.app/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
