--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.3.0",
     "react-scripts": "5.0.1",
+    "react-to-print": "^2.15.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
