--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-ga": "^3.3.1",
     "react-google-recaptcha": "^3.1.0",
+    "react-gtm-module": "^2.0.11",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.3.0",
